--- a/NodeJs course/Problems/Day10/package.json
+++ b/NodeJs course/Problems/Day10/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3_express",
+  "name": "day10",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3"
   }
 }
